fix: overflow contact form

--- a/alex-portfolio/src/index.css
+++ b/alex-portfolio/src/index.css
@@ -120,6 +120,6 @@ button:focus-visible {
   #contact-form {
     margin-top: 50px;
     margin-bottom: 50px;
-    width: 500px;
+    width: 400px;
   }
 }
